<resources>
    <string name="app_name">DigitalHouseFoods_Desafio2</string>
    <string name="email">Email</string>
    <string name="digital_house_foods">Digital House Foods</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="or">or</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="repeate_password">Repeate password</string>

    <string name="campo_vazio">Existe campo vazio</string>
    <string name="campo_preenchidos_errados">Existe campo com preenchimento errado</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>