<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/box_top_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/tvtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_text"
        android:text="@string/digital_house_foods"
        android:textColor="@color/white"
        android:textSize="@dimen/size_text_title"
        android:layout_marginTop="@dimen/margin_top_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tilemail"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilemail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        style="@style/TextInputLayoutDefault"
        app:layout_constraintTop_toBottomOf="@+id/tvtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_top_email"
        android:layout_marginStart="@dimen/margin_text"
        android:layout_marginEnd="@dimen/margin_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            style="@style/EditTextDefault">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        style="@style/TextInputLayoutDefault"
        app:layout_constraintTop_toBottomOf="@+id/tilemail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btLogIn"
        android:layout_marginTop="@dimen/margin_password_email"
        android:layout_marginStart="@dimen/margin_text"
        android:layout_marginEnd="@dimen/margin_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            style="@style/EditTextDefault">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btLogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        style="@style/button_login"
        app:layout_constraintTop_toBottomOf="@+id/tilPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tvOr"
        android:layout_marginTop="@dimen/margin_top_login"
        android:layout_marginStart="@dimen/margin_text"
        android:layout_marginEnd="@dimen/margin_text"/>

    <TextView
        android:id="@+id/tvOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textColor="@color/or_color"
        android:textAllCaps="true"
        android:textSize="@dimen/text_size_or"
        app:layout_constraintTop_toBottomOf="@+id/btLogIn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_top_or"/>

    <ImageView
        android:id="@+id/path_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/tvOr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btLogIn"
        android:layout_marginTop="@dimen/margin_top_path"
        android:background="@drawable/path"
        android:layout_marginEnd="@dimen/margin_text"
        android:layout_marginStart="@dimen/margin_text"/>

    <ImageView
        android:id="@+id/path_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/tvOr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btLogIn"
        android:layout_marginTop="@dimen/margin_top_path"
        android:background="@drawable/path"
        android:layout_marginEnd="@dimen/margin_text"
        android:layout_marginStart="@dimen/margin_text"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        style="@style/button_register"
        app:layout_constraintTop_toBottomOf="@id/tvOr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/margin_top_register"
        android:layout_marginStart="@dimen/margin_text"
        android:layout_marginEnd="@dimen/margin_text"/>

</androidx.constraintlayout.widget.ConstraintLayout>