<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/box_top_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageButton
        android:id="@+id/ibRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvRegister"
        android:layout_marginStart="@dimen/margin_text"
        android:background="@drawable/ic_arrow_back_24px"
        android:layout_marginTop="@dimen/margin_button_top"/>

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_text"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="@dimen/size_text_title"
        android:layout_marginTop="@dimen/margin_top_title"
        app:layout_constraintStart_toEndOf="@id/ibRegister"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tilName"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        style="@style/TextInputLayoutDefault"
        app:layout_constraintTop_toBottomOf="@+id/tvRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_top_email"
        android:layout_marginStart="@dimen/margin_text"
        android:layout_marginEnd="@dimen/margin_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            style="@style/EditTextDefault">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        style="@style/TextInputLayoutDefault"
        app:layout_constraintTop_toBottomOf="@+id/tilName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tilPassword2"
        android:layout_marginTop="@dimen/margin_password_email"
        android:layout_marginStart="@dimen/margin_text"
        android:layout_marginEnd="@dimen/margin_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            style="@style/EditTextDefault">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        style="@style/TextInputLayoutDefault"
        app:layout_constraintTop_toBottomOf="@+id/tilEmail2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tilRepeatPassword"
        android:layout_marginTop="@dimen/margin_password_email"
        android:layout_marginStart="@dimen/margin_text"
        android:layout_marginEnd="@dimen/margin_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            style="@style/EditTextDefault">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilRepeatPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/repeate_password"
        style="@style/TextInputLayoutDefault"
        app:layout_constraintTop_toBottomOf="@+id/tilPassword2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btRegister2"
        android:layout_marginTop="@dimen/margin_password_email"
        android:layout_marginStart="@dimen/margin_text"
        android:layout_marginEnd="@dimen/margin_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etRepeatPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            style="@style/EditTextDefault">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btRegister2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        style="@style/button_login"
        app:layout_constraintTop_toBottomOf="@id/tilRepeatPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="200dp"
        android:layout_marginStart="@dimen/margin_text"
        android:layout_marginEnd="@dimen/margin_text"/>

</androidx.constraintlayout.widget.ConstraintLayout>